// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls updateTree.js adds one source 1`] = `
"{
  \\"type\\": \\"directory\\",
  \\"name\\": \\"root\\",
  \\"path\\": \\"\\",
  \\"contents\\": [
    {
      \\"type\\": \\"directory\\",
      \\"name\\": \\"davidwalsh.name\\",
      \\"path\\": \\"davidwalsh.name\\",
      \\"contents\\": [
        {
          \\"type\\": \\"source\\",
          \\"name\\": \\"(index)\\",
          \\"path\\": \\"https://davidwalsh.name/\\",
          \\"contents\\": {
            \\"id\\": \\"server1.conn13.child1/39\\",
            \\"url\\": \\"https://davidwalsh.name/\\",
            \\"isBlackBoxed\\": false,
            \\"isPrettyPrinted\\": false,
            \\"relativeUrl\\": \\"https://davidwalsh.name/\\",
            \\"introductionUrl\\": null,
            \\"isWasm\\": false,
            \\"isExtension\\": false,
            \\"loadedState\\": \\"unloaded\\",
            \\"contentType\\": \\"text/javascript\\",
            \\"text\\": \\"\\"
          }
        },
        {
          \\"type\\": \\"source\\",
          \\"name\\": \\"source1.js\\",
          \\"path\\": \\"davidwalsh.name/source1.js\\",
          \\"contents\\": {
            \\"id\\": \\"server1.conn13.child1/37\\",
            \\"url\\": \\"https://davidwalsh.name/source1.js\\",
            \\"isBlackBoxed\\": false,
            \\"isPrettyPrinted\\": false,
            \\"relativeUrl\\": \\"https://davidwalsh.name/source1.js\\",
            \\"introductionUrl\\": null,
            \\"isWasm\\": false,
            \\"isExtension\\": false,
            \\"loadedState\\": \\"unloaded\\",
            \\"contentType\\": \\"text/javascript\\",
            \\"text\\": \\"\\"
          }
        }
      ]
    }
  ]
}"
`;

exports[`calls updateTree.js adds two sources 1`] = `
"{
  \\"type\\": \\"directory\\",
  \\"name\\": \\"root\\",
  \\"path\\": \\"\\",
  \\"contents\\": [
    {
      \\"type\\": \\"directory\\",
      \\"name\\": \\"davidwalsh.name\\",
      \\"path\\": \\"davidwalsh.name\\",
      \\"contents\\": [
        {
          \\"type\\": \\"source\\",
          \\"name\\": \\"(index)\\",
          \\"path\\": \\"https://davidwalsh.name/\\",
          \\"contents\\": {
            \\"id\\": \\"server1.conn13.child1/39\\",
            \\"url\\": \\"https://davidwalsh.name/\\",
            \\"isBlackBoxed\\": false,
            \\"isPrettyPrinted\\": false,
            \\"relativeUrl\\": \\"https://davidwalsh.name/\\",
            \\"introductionUrl\\": null,
            \\"isWasm\\": false,
            \\"isExtension\\": false,
            \\"loadedState\\": \\"unloaded\\",
            \\"contentType\\": \\"text/javascript\\",
            \\"text\\": \\"\\"
          }
        },
        {
          \\"type\\": \\"source\\",
          \\"name\\": \\"source1.js\\",
          \\"path\\": \\"davidwalsh.name/source1.js\\",
          \\"contents\\": {
            \\"id\\": \\"server1.conn13.child1/37\\",
            \\"url\\": \\"https://davidwalsh.name/source1.js\\",
            \\"isBlackBoxed\\": false,
            \\"isPrettyPrinted\\": false,
            \\"relativeUrl\\": \\"https://davidwalsh.name/source1.js\\",
            \\"introductionUrl\\": null,
            \\"isWasm\\": false,
            \\"isExtension\\": false,
            \\"loadedState\\": \\"unloaded\\",
            \\"contentType\\": \\"text/javascript\\",
            \\"text\\": \\"\\"
          }
        },
        {
          \\"type\\": \\"source\\",
          \\"name\\": \\"source2.js\\",
          \\"path\\": \\"davidwalsh.name/source2.js\\",
          \\"contents\\": {
            \\"id\\": \\"server1.conn13.child1/40\\",
            \\"url\\": \\"https://davidwalsh.name/source2.js\\",
            \\"isBlackBoxed\\": false,
            \\"isPrettyPrinted\\": false,
            \\"relativeUrl\\": \\"https://davidwalsh.name/source2.js\\",
            \\"introductionUrl\\": null,
            \\"isWasm\\": false,
            \\"isExtension\\": false,
            \\"loadedState\\": \\"unloaded\\",
            \\"contentType\\": \\"text/javascript\\",
            \\"text\\": \\"\\"
          }
        }
      ]
    }
  ]
}"
`;

exports[`calls updateTree.js shows all the sources 1`] = `
"{
  \\"type\\": \\"directory\\",
  \\"name\\": \\"root\\",
  \\"path\\": \\"\\",
  \\"contents\\": [
    {
      \\"type\\": \\"directory\\",
      \\"name\\": \\"davidwalsh.name\\",
      \\"path\\": \\"davidwalsh.name\\",
      \\"contents\\": [
        {
          \\"type\\": \\"source\\",
          \\"name\\": \\"(index)\\",
          \\"path\\": \\"https://davidwalsh.name/\\",
          \\"contents\\": {
            \\"id\\": \\"server1.conn13.child1/39\\",
            \\"url\\": \\"https://davidwalsh.name/\\",
            \\"isBlackBoxed\\": false,
            \\"isPrettyPrinted\\": false,
            \\"relativeUrl\\": \\"https://davidwalsh.name/\\",
            \\"introductionUrl\\": null,
            \\"isWasm\\": false,
            \\"isExtension\\": false,
            \\"loadedState\\": \\"unloaded\\",
            \\"contentType\\": \\"text/javascript\\",
            \\"text\\": \\"\\"
          }
        },
        {
          \\"type\\": \\"source\\",
          \\"name\\": \\"source1.js\\",
          \\"path\\": \\"davidwalsh.name/source1.js\\",
          \\"contents\\": {
            \\"id\\": \\"server1.conn13.child1/37\\",
            \\"url\\": \\"https://davidwalsh.name/source1.js\\",
            \\"isBlackBoxed\\": false,
            \\"isPrettyPrinted\\": false,
            \\"relativeUrl\\": \\"https://davidwalsh.name/source1.js\\",
            \\"introductionUrl\\": null,
            \\"isWasm\\": false,
            \\"isExtension\\": false,
            \\"loadedState\\": \\"unloaded\\",
            \\"contentType\\": \\"text/javascript\\",
            \\"text\\": \\"\\"
          }
        }
      ]
    }
  ]
}"
`;
